# gomocup-rust

./: .gitignore  Cargo.toml  README.md
src/: brain.rs  config.rs  errors.rs  input.rs  lib.rs  main.rs
src/board/: array.rs  mod.rs
src/brain/: mod.rs  random.rs
src/brain/example_brains/: random.rs
src/brains/: random.rs
src/commands/: about_command.rs  begin_command.rs  board_command.rs  context.rs  end_command.rs  game_context.rs  info_command.rs  input_options.rs  mod.rs  start_command.rs  turn_command.rs
src/game_board/: array.rs  empty.rs  mod.rs
