[package]
name = "moomoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
assert_cmd = "2.0.11"

[dependencies]
strum = { version = "0.24", features = ["derive"] }
enum_dispatch = "0.3.12"
mockall = "0.11.4"
assert_matches = "1.5.0"